# KydrasEcho

./: .gitignore  README.md  install.sh  kydras_echo_launcher.py  manifest-20250811-092330.csv  pyproject.toml  requirements.txt  run.sh  run_echo.sh
.bak/: index.html
.github/workflows/: upload-release-assets.yml
gui/: app.py  app.py.bak  app.py.bak.1754678737  app.py.bak.1754920236  app.py.bak.1754925572  app.py.bak.1754928996
gui/static/: style.css  style.css.bak.1754927308  style.css.bak.1754929745  style.css.bak.1754933346  style.css.bak.1754934337
gui/static/js/: transcribe.js
gui/templates/: _transcribe_block.html  index.html  index.html.bak.1754786973  index.html.bak.1754929730  index.html.bak.1754931686
kydras-echo-v0.1.0-linux-x64/: LICENSE  README.md  run.sh
kydras-echo-v0.1.0-linux-x64/gui/: app.py.bak.1754703091  app.py.bak.1754703369
kydras-echo-v0.1.0-linux-x64/kydras-echo-v0.1.0-linux-x64/src-tauri/: Cargo.toml  tauri.conf.json.bak
kydras-echo-v0.1.0-linux-x64/kydras-echo-v0.1.0-linux-x64/src-tauri/src/: main.rs
kydras-echo-v0.1.0-linux-x64/kydras-echo-v0.1.0-linux-x64/src/vp/: cli.py
kydras-echo-v0.1.0-linux-x64/scripts/: build.sh
kydras-echo-v0.1.0-linux-x64/src-tauri/: tauri.conf.json
kydras-echo-v0.1.0-linux-x64/tools/: release_final.sh
